# Global_Sales_EDA

./: README.md  pyproject.toml
data/processed/: Merch_processed.csv
notebooks/: Data_loading_cleaning.ipynb  Data_visualitation.ipynb  prueba.py
reports/: PRESENTACION_EDA.odp
scripts/: ClaseAbdon.py  Clave_visualitation.py  Merch_processed.csv  __init__.py
