[tool.poetry]
name = "analisis-datos-eda"
version = "0.1.0"
description = "Analisis de datos sobre la actividad diaria sobre los pasos diarios."
authors = ["abdonrb <abdondjesusramirez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
datasciencetree = "^0.1.0"
seaborn = "^0.13.2"
matplotlib = "^3.10.0"
scipy = "^1.14.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
